add simple API for creating an edit based on original match
